--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mjml-utils",
-  "version": "0.0.1",
+  "name": "mjml-utils-2",
+  "version": "0.0.2",
   "author": "Dariusz Tomaszewski <dtomaszewski@gmail.com>",
   "description": "The utility belt for MJML 2 developers",
   "repository": "https://github.com/dtomaszewski/mjml-utils-2",
