--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mjml-utils-2",
+  "name": "mjml2-utils",
   "version": "0.0.2",
   "author": "Dariusz Tomaszewski <dtomaszewski@gmail.com>",
   "description": "The utility belt for MJML 2 developers",
